# Growtopia-Multibot-Socks5

./: CMakeLists.txt  mingw-toolchain.cmake
.github/workflows/: build-windows.yml  main.yml
New-Project/: New-Project.vcxproj
New-Project/src/: Bot_Local.cpp  Bot_Local.h  Bot_Menu.cpp  ENetClient.cpp  ENetClient.h  ItemInfoManager.cpp  ItemInfoManager.h  Utils.cpp  Utils.h  auth.hpp  tchar_compat.h  windows_compat.h
New-Project/src/misc/: BitMap.h  Functions.h
New-Project/src/proton/: hash.hpp  rtparam.hpp  variant.hpp  vector.hpp
New-Project/src/wrapper/: Gui.h  d3d9_stub.h
build-windows/: CMakeCache.txt
